# umbra

./: .gitignore  Cargo.toml  README.md  config.example.toml  flake.nix
crates/umbra/: Cargo.toml
crates/umbra-agent/: Cargo.toml
crates/umbra-agent/src/: cmd.rs  main.rs
crates/umbra-agent/src/probe/: dns.rs  http.rs  mod.rs  network.rs  tcp.rs
crates/umbra-agent/src/tools/: auth_test.rs  bandwidth.rs  certificate_check.rs  check.rs  container_audit.rs  detect_service_type.rs  diagnose.rs  disk_usage.rs  dns_lookup.rs  env.rs  fast_scan.rs  filesystem.rs  grpc_call.rs  haproxy_stats.rs  http_probe.rs  http_request.rs  jwt_decode.rs  load_test.rs  mod.rs  mysql_health.rs  namespaces.rs  network_map.rs  nginx_status.rs  open_files.rs  packet_capture.rs  port_scan.rs  postgres_health.rs  process_list.rs  psql_query.rs  redis_cmd.rs  redis_health.rs  resource_usage.rs  secret_scan.rs  security_audit.rs  service_deep_probe.rs  services.rs  socket_list.rs  syscall_trace.rs  tls_audit.rs  trace_route.rs  (+3 more)
crates/umbra-core/: Cargo.toml
crates/umbra-core/src/: assessment.rs  env.rs  identity.rs  lib.rs  security_scan.rs  services.rs  targets.rs  types.rs
crates/umbra/src/: config.rs  main.rs  pool.rs
crates/umbra/src/tools/: assess.rs  connection.rs  discover.rs  mod.rs  orchestrate.rs  proxy.rs  report.rs  security_scan.rs
module/: default.nix
viewer/: index.html  package.json  vite.config.ts
viewer/src/: App.tsx  index.css  types.ts
viewer/src/components/: Gallery.tsx  Header.tsx  NetworkGrid.tsx  ProtocolBreakdown.tsx  ScoreGauge.tsx  SecurityFindings.tsx  ServiceDetails.tsx  SummaryCards.tsx
viewer/src/graphql/: client.ts  operations.ts  transform.ts
