[workspace]
resolver = "2"
members = [
    "crates/umbra-core",
    "crates/umbra-agent",
    "crates/umbra",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Pleme Team <team@pleme.io>"]
repository = "https://github.com/pleme-io/umbra"
homepage = "https://github.com/pleme-io/umbra"

[workspace.dependencies]
umbra-core = { path = "crates/umbra-core", version = "0.1.0" }
rmcp = "0.16"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
schemars = "1"
serde_yaml = "0.9"
dirs = "6"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
