[package]
name = "umbra-agent"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Container-side MCP agent for Kubernetes diagnostics"
keywords = ["kubernetes", "diagnostics", "mcp", "agent"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "umbra-agent"
path = "src/main.rs"

[dependencies]
umbra-core = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
hickory-resolver = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
libc = "0.2"
base64 = { workspace = true }
