[package]
name = "umbra-core"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Shared types and K8s environment parsing for Umbra"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
